# cli-hooks-rs

./: Cargo.toml  README.md
.hooks/: post.rs  pre.rs
example/: Cargo.toml
example/.hooks/: post.rs  pre.rs
example/src/: main.rs
src/: lib.rs
tests/: integration_tests.rs
tests/fixtures/: mod.rs  post_hook.rs  pre_hook.rs
