[package]
name = "cli_hooks"
description = "A procedural macro that enables dynamic execution of Rust code before and after function calls."
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only"
license-file = "LICENCE"
homepage = "https://github.com/MCarlomagno/cli-hooks-rs"
repository = "https://github.com/MCarlomagno/cli-hooks-rs"
readme = "README.md"
keywords = ["cli", "command", "terminal", "api", "hook", "pre", "post", "dev", "tool"]
categories = ["command-line-utilities", "command-line-interface", "development-tools"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true